--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
@@ -67,12 +67,17 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>psidev.psi.mi</groupId>
+            <artifactId>psimitab</artifactId>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab-converters</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
         <!-- Binary Search Client -->
