--- a/repo/bridges/trunk/intact-ontologies/pom.xml
+++ b/repo/bridges/trunk/intact-ontologies/pom.xml
@@ -21,7 +21,7 @@
             <groupId>org.geneontology</groupId>
             <artifactId>obo</artifactId>
             <version>2.000-beta38</version>
-          </dependency>
+        </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
@@ -31,6 +31,24 @@
             <groupId>com.google.code</groupId>
             <artifactId>google-collections</artifactId>
             <version>0.5</version>
+        </dependency>
+
+        <!-- third party deps -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.15</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
