--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp-filtered/WEB-INF/web.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp-filtered/WEB-INF/web.xml
@@ -47,7 +47,7 @@
             Configuration file
         </description>
         <param-name>psidev.DEFAULT_CONFIG_FILE</param-name>
-        <param-value>${binarysearch.config}</param-value>
+        <param-value>${intactview.config}</param-value>
         <!--<param-value>/homes/baranda/tmp/binary-search.cfg.xml</param-value>-->
     </context-param>
     <context-param>
@@ -55,7 +55,7 @@
             Default index location
         </description>
         <param-name>psidev.DEFAULT_INDEX</param-name>
-        <param-value>${binarysearch.defaultindex}</param-value>
+        <param-value>${intact.interactionIndex}</param-value>
     </context-param>
     <context-param>
         <description>
@@ -236,7 +236,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-        classpath*:/WEB-INF/classes/orchestra.spring.xml
+        classpath*:*.spring.xml
     </param-value>
   </context-param>
 
