--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -23,8 +23,8 @@
         <jetty.port>9090</jetty.port>
         <jetty.context>binary-search</jetty.context>
         
-        <binarysearch.config>/ebi/sp/misc1/vusers/intact/production/webapp-conf/binary-search.cfg.xml</binarysearch.config>
-        <binarysearch.defaultindex>/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current</binarysearch.defaultindex>
+        <intactview.config>/ebi/sp/misc1/vusers/intact/production/webapp-conf/binary-search.cfg.xml</intactview.config>
+        <intact.interactionIndex>/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current</intact.interactionIndex>
     </properties>
 
     <build>
@@ -77,17 +77,23 @@
             </activation>
             <dependencies>
                 <dependency>
-    <groupId>org.apache.tomcat</groupId>
-    <artifactId>jasper-el</artifactId>
-    <version>6.0.14</version>
-</dependency>
-
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>jasper-el</artifactId>
+                    <version>6.0.14</version>
+                </dependency>
             </dependencies>
         </profile>
     </profiles>
 
     <!-- Project dependencies -->
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab-search</artifactId>
