--- a/repo/service/tags/binary-search-webapp_before-trinidad/pom.xml
+++ b/repo/service/tags/binary-search-webapp_before-trinidad/pom.xml
@@ -6,8 +6,8 @@
 
     <parent>
         <groupId>uk.ac.ebi.intact.service.search.binary</groupId>
-         <artifactId>search-binary-master</artifactId>
-         <version>1.6.0-SNAPSHOT</version>
+        <artifactId>search-binary-master</artifactId>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -27,7 +27,7 @@
     <build>
         <finalName>intact-binary-search-${buildNumber}</finalName>
 
-         <resources>
+        <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
@@ -36,12 +36,15 @@
 
         <plugins>
             <plugin>
-                <groupId>com.sun.tools.xjc.maven2</groupId>
-                <artifactId>maven-jaxb-plugin</artifactId>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.6.1</version>
+
                 <configuration>
                     <generatePackage>uk.ac.ebi.intact.binarysearch.webapp.generated</generatePackage>
                     <extension>true</extension>
                 </configuration>
+
                 <executions>
                     <execution>
                         <goals>
@@ -49,19 +52,6 @@
                         </goals>
                     </execution>
                 </executions>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                        <version>2.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>2.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -203,6 +193,12 @@
     <!-- Project dependencies -->
     <dependencies>
         <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab-search</artifactId>
             <version>1.5.0-SNAPSHOT</version>
@@ -213,9 +209,9 @@
             <version>2.1.2</version>
         </dependency>
         <dependency>
-           <groupId>uk.ac.ebi.intact.service.search.legacy</groupId>
-           <artifactId>search-wsclient</artifactId>
-           <version>1.6.0-SNAPSHOT</version>
+            <groupId>uk.ac.ebi.intact.service.search.legacy</groupId>
+            <artifactId>search-wsclient</artifactId>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -250,9 +246,9 @@
 
 
         <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring</artifactId>-->
-            <!--<version>2.0.5</version>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring</artifactId>-->
+        <!--<version>2.0.5</version>-->
         <!--</dependency>-->
 
         <dependency>
@@ -300,7 +296,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.1</version>
+            <version>2.1.7</version>
         </dependency>
 
         <dependency>
@@ -312,19 +308,47 @@
     </dependencies>
 
     <repositories>
+        <!--<repository>-->
+            <!--<id>java.net.2</id>-->
+            <!--<url>http://download.java.net/maven/2</url>-->
+            <!--<snapshots>-->
+                <!--<enabled>false</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+        <!--<repository>-->
+            <!--<id>apache.snapshots</id>-->
+            <!--<name>Apache Maven Repository (Snapshots and Test Builds)</name>-->
+            <!--<url>http://people.apache.org/maven-snapshot-repository</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+            <!--</releases>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
         <repository>
-            <id>java.net.2</id>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Maven 2 Repository</name>
             <url>http://download.java.net/maven/2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
         </repository>
         <repository>
-            <id>apache.snapshots</id>
-            <name>Apache Maven Repository (Snapshots and Test Builds)</name>
-            <url>http://people.apache.org/maven-snapshot-repository</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <id>maven-repository.dev.java.net</id>
+            <name>Java.net Maven 1 Repository (legacy)</name>
+            <url>http://download.java.net/maven/1</url>
+            <layout>legacy</layout>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Maven 2 Repository</name>
+            <url>http://download.java.net/maven/2</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>maven-repository.dev.java.net</id>
+            <name>Java.net Maven 1 Repository (legacy)</name>
+            <url>http://download.java.net/maven/1</url>
+            <layout>legacy</layout>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
