--- a/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
@@ -64,6 +64,13 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+		   <groupId>org.apache.lucene</groupId>
+		   <artifactId>lucene-core</artifactId>
+		   <version>2.3.0</version>
+		</dependency>
+
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
