--- a/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
@@ -3,6 +3,7 @@ log4j.rootCategory=WARN, A
 log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=WARN
 log4j.category.uk.ac.ebi.intact.dataexchange.cvutils.PSILoader=WARN
 
+log4j.category.uk.ac.ebi.intact.dataexchange.cvutils.services=WARN
 # intact-core
 log4j.category.uk.ac.ebi.intact=WARN
 log4j.category.uk.ac.ebi.intact.persistence=WARN
