--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
@@ -14,6 +14,12 @@
     <name>IntAct Data Exchange :: PSI MI :: TAB :: IntAct PSI-MI TAB Converters</name>
 
     <dependencies>
+
+        <dependency>
+            <groupId>uk.ac.ebi.intact.commons</groupId>
+            <artifactId>intact-commons</artifactId>
+            <version>2.1.6</version>
+        </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
