--- a/repo/service/branches/binary-search-webapp_before-trinidad/pom.xml
+++ b/repo/service/branches/binary-search-webapp_before-trinidad/pom.xml
@@ -150,7 +150,7 @@
                     <dependency>
                         <groupId>org.apache.myfaces.tomahawk</groupId>
                         <artifactId>tomahawk</artifactId>
-                        <version>1.1.6</version>
+                        <version>1.1.7-SNAPSHOT</version>
                         <scope>compile</scope>
                         <exclusions>
                             <exclusion>
@@ -164,7 +164,6 @@
                         <groupId>org.apache.myfaces.tomahawk</groupId>
                         <artifactId>tomahawk-sandbox</artifactId>
                         <version>1.1.6</version>
-                        <scope>provided</scope>
                         <exclusions>
                             <exclusion>
                                 <groupId>commons-el</groupId>
@@ -175,16 +174,19 @@
                 </dependencies>
             </dependencyManagement>
             <dependencies>
+                
                 <!-- server -->
                 <dependency>
                     <groupId>javax.servlet</groupId>
                     <artifactId>servlet-api</artifactId>
                     <version>2.5</version>
+                    <scope>provided</scope>
                 </dependency>
                 <dependency>
                     <groupId>javax.servlet.jsp</groupId>
                     <artifactId>jsp-api</artifactId>
                     <version>2.1</version>
+                    <scope>provided</scope>
                 </dependency>
             </dependencies>
         </profile>
