--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
@@ -23,7 +23,7 @@
         <jetty.port>9095</jetty.port>
         <db.alias>nodb</db.alias>
 
-        <binarysearch.defaultindex>/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current</binarysearch.defaultindex>
+        <intact.interactionIndex>/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current</intact.interactionIndex>
     </properties>
 
     <build>
