--- a/repo/service/trunk/psicquic-webservice/psicquic-ws/pom.xml
+++ b/repo/service/trunk/psicquic-webservice/psicquic-ws/pom.xml
@@ -20,7 +20,7 @@
     <name>IntAct :: PSICQUIC WS</name>
 
     <properties>
-        <cxf.version>2.1.1</cxf.version>
+        <cxf.version>2.1.3</cxf.version>
         <spring.version>2.5.5</spring.version>
 
         <hibernate.driver>${db.driver}</hibernate.driver>
@@ -33,43 +33,49 @@
     <build>
         <finalName>${artifactId}-${version}</finalName>
         <plugins>
-            <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>jaxws-maven-plugin</artifactId>-->
-                <!--<version>1.9</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>wsimport</id>-->
-                        <!--<phase>generate-sources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>wsimport</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--<extension>true</extension>-->
-                    <!--<wsdlDirectory>${project.basedir}/src/main/wsdl/</wsdlDirectory>-->
-                    <!--<bindingDirectory>${project.basedir}/src/main/wsdl/</bindingDirectory>-->
-                    <!--<verbose>true</verbose>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
-             <plugin>
-                <groupId>org.jvnet.jaxb2.maven2</groupId>
-	            <artifactId>maven-jaxb2-plugin</artifactId>
-                <configuration>
-                    <schemaDirectory>${project.basedir}/src/main/wsdl</schemaDirectory>
-                    <bindingDirectory>${project.basedir}/src/main/wsdl</bindingDirectory>
-                    <extension>true</extension>
-                </configuration>
+            <plugin>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-codegen-plugin</artifactId>
+                <version>${cxf.version}</version>
                 <executions>
                     <execution>
+                        <id>generate-sources</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <sourceRoot>${basedir}/target/generated/java</sourceRoot>
+                            <wsdlOptions>
+                                <wsdlOption>
+                                    <wsdl>${basedir}/src/main/wsdl/psicquic.wsdl</wsdl>
+                                    <extraargs>
+                                            <extraarg>-b</extraarg>
+                                            <extraarg>${basedir}/src/main/wsdl/intact-binding.xjb</extraarg>
+                                          </extraargs>
+                                </wsdlOption>
+                            </wsdlOptions>
+                        </configuration>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>wsdl2java</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
+             <!--<plugin>-->
+                <!--<groupId>org.jvnet.jaxb2.maven2</groupId>-->
+	            <!--<artifactId>maven-jaxb2-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<schemaDirectory>${project.basedir}/src/main/wsdl</schemaDirectory>-->
+                    <!--<bindingDirectory>${project.basedir}/src/main/wsdl</bindingDirectory>-->
+                    <!--<extension>true</extension>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>generate</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
