--- a/repo/service/trunk/psicquic/intact-psicquic-ws/pom.xml
+++ b/repo/service/trunk/psicquic/intact-psicquic-ws/pom.xml
@@ -3,6 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>uk.ac.ebi.intact.service</groupId>
+        <artifactId>service-master</artifactId>
+        <version>1.6.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>uk.ac.ebi.intact.service.psicquic</groupId>
     <artifactId>intact-psicquic-ws</artifactId>
     <packaging>war</packaging>
@@ -15,9 +21,17 @@
         <cxf.version>2.1.3</cxf.version>
         <spring.version>2.5.5</spring.version>
 
+        <!-- Database config -->
+        <hibernate.driver>${db.driver}</hibernate.driver>
+        <hibernate.url>${db.protocol}:${db.subprotocol}${db.separator}${db.alias}</hibernate.url>
+        <hibernate.user>${db.user}</hibernate.user>
+        <hibernate.password>${db.password}</hibernate.password>
+
         <!-- configurable bits -->
 
-        <psicquic.index>${basedir}/target/psicquic-index</psicquic.index>
+        <psicquic.index>${intact.interactionIndex}</psicquic.index>
+
+        <intact.institution>intact</intact.institution>
 
     </properties>
 
@@ -112,39 +126,6 @@
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>createIndex</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-classpath</argument>
-                                <classpath/>
-                                <argument>uk.ac.ebi.intact.psicquic.ws.utils.MitabIndexer</argument>
-                                <argument>${psicquic.index}</argument>
-                                <argument>${mitabFile}</argument>
-                                <argument>${hasHeader}</argument>
-                            </arguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <dependencies>
         <!-- PSIMI -->
         <dependency>
@@ -153,11 +134,11 @@
             <version>1.7.0-SNAPSHOT</version>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>-->
-        <!--<artifactId>intact-psixml-exchange</artifactId>-->
-        <!--<version>2.0.2-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psixml-exchange</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
 
         <!-- Logging -->
         <dependency>
