--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -24,7 +24,7 @@
         <maven.test.skip>true</maven.test.skip>
         <db.connectionProviderClass>uk.ac.ebi.intact.application.editor.hibernate.EditorConnectionProvider
         </db.connectionProviderClass>
-        <core.version>1.9.4</core.version>
+        <core.version>1.9.5-SNAPSHOT</core.version>
         <bridges.version>2.0.5</bridges.version>
     </properties>
 
